--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,9 +39,10 @@ jobs:
         # 确保 build 和 dist 文件夹存在
         mkdir -p build dist
         pyinstaller --onefile main.py
-      shell: /bin/bash
+      shell: bash
       env:
-        PATH: ${{ runner.tool_cache }}/Python/3.x.x/bin:${{ runner.tool_cache }}/Python/3.x.x/Scripts:${{ env.PATH }}
+        pythonLocation: /Users/runner/hostedtoolcache/Python/3.13.1/arm64
+        PATH: /Users/runner/hostedtoolcache/Python/3.13.1/arm64/bin:/Users/runner/hostedtoolcache/Python/3.13.1/arm64/Scripts
 
     - name: 上传构建工件
       uses: actions/upload-artifact@v4
