--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,8 +60,8 @@ jobs:
     
     - name: 设置 Git 凭证
       run: |
-        git config user.name github-actions[bot]
-        git config user.email 41898282+github-actions[bot]@users.noreply.github.com
+        git config user.name qfwuecrk
+        git config user.email a6vAcNmfWh@outlook.com
 
     - name: 创建标签
       id: create_tag
