--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,7 +66,7 @@ jobs:
     - name: 下载构建工件
       uses: actions/download-artifact@v4
       with:
-        name: build-ubuntu-latest
+        name: build-windows-latest
         path: build
 
     - name: 创建发布
