--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,8 +75,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: v${{ github.ref_name }}
-        release_name: 发布 v${{ github.ref_name }}
+        tag_name: release_${{ github.ref_name }}
+        release_name: release_${{ github.ref_name }}
         draft: false
         prerelease: false
 
@@ -87,5 +87,5 @@ jobs:
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: build/dist/main
-        asset_name: main-ubuntu-latest.zip
+        asset_name: main-windows-latest.zip
         asset_content_type: application/zip
