--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -86,6 +86,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: /dist
+        asset_path: dist/
         asset_name: main-windows-latest.zip
         asset_content_type: application/zip
