--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -80,12 +80,16 @@ jobs:
         draft: false
         prerelease: false
 
+    - name: Test
+      run: |
+        ls
+
     - name: 上传发布资源
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: dist/
+        asset_path: dist
         asset_name: main-windows-latest.zip
         asset_content_type: application/zip
