--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,7 +82,7 @@ jobs:
 
     - name: Test
       run: |
-        ls build
+        ls build/dist
 
     - name: 上传发布资源
       uses: actions/upload-release-asset@v1
@@ -90,6 +90,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: build
+        asset_path: build/dist
         asset_name: main-windows-latest.zip
         asset_content_type: application/zip
