--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI Pipeline
+name: CI
 
 on:
   push:
@@ -16,52 +16,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: 检出代码
-      uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-    - name: 设置 Git 凭证
-      run: |
-        git config user.name github-actions[bot]
-        git config user.email 41898282+github-actions[bot]@users.noreply.github.com
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
+          cache: 'pip'
 
-    - name: 设置 Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.x'
+      - name: Display Python version
+        run: python -c "import sys; print(sys.version)"
 
-    - name: 创建缓存目录
-      run: mkdir -p .cache
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: 缓存依赖
-      uses: actions/cache@v4
-      with:
-        key: python-dependencies-${{ runner.os }}-${{ hashFiles('**/requirements.txt') }}
-        path: .cache
-        restore-keys: |
-          python-dependencies-${{ runner.os }}-
+      - name: Lint code with black
+        run: |
+          python -m pip install black
+          black --check .
 
-    - name: 安装依赖
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
-    - name: 代码静态分析
-      run: black --check . | tee black-report.txt
-
-    - name: 运行单元测试
-      run: |
-        coverage run -m unittest discover -s tests
-        coverage report
-        coverage html
-
-    - name: 上传覆盖率报告
-      uses: actions/upload-artifact@v4
-      with:
-        name: coverage-report
-        path: htmlcov
-
-    - name: 上传静态分析报告
-      uses: actions/upload-artifact@v4
-      with:
-        name: black-report
-        path: black-report.txt
+      - name: Test with unittest
+        run: |
+          python -m pip install coverage
+          coverage run -m unittest discover -s tests
+          coverage report
